feat: random borwser selection, step wise platform initialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cucumberautocomplete.steps": [
-    "tests/steps/**/*.ts"
+    "tests/step_definition/**/*.ts"
   ],
   "cucumberautocomplete.syncfeatures": "tests/features/**/*.feature",
   "cucumberautocomplete.strictGherkinCompletion": true,
