--- a/env.config.json
+++ b/env.config.json
@@ -1,11 +1,10 @@
 {
   "dev": {
-    "api_base_url": "https://dev-thinking-tester.herokuapp.com",
-    "web_base_url": "https://dev-contact-list-app.herokuapp.com"
+    "api_base_url": "https://thinking-tester-contact-list.herokuapp.com",
+    "web_base_url": "https://thinking-tester-contact-list.herokuapp.com"
   },
   "qa": {
     "api_base_url": "https://thinking-tester-contact-list.herokuapp.com",
     "web_base_url": "https://thinking-tester-contact-list.herokuapp.com"
   }
 }
-
