--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "playwright-bdd",
-  "type": "module",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "name": "playwright-cucumber-framework",
+  "scripts": {
+    "test": "cucumber-js",
+    "report": "allure generate ./allure-results --clean"
+  },
   "devDependencies": {
-    "@cucumber/cucumber": "^12.5.0",
-    "@playwright/test": "^1.57.0",
-    "@types/node": "^25.0.10",
-    "playwright-core": "^1.57.0",
-    "ts-node": "^10.9.2"
+    "@playwright/test": "^1.43.0",
+    "@cucumber/cucumber": "^10.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0",
+    "dotenv": "^16.0.0",
+    "allure-cucumberjs": "^2.0.0"
   }
 }
